--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Nothing+You+Could+Do&display=swap"
+        rel="stylesheet">
+
+
     <title>MicheVida</title>
 </head>
 
@@ -50,11 +55,17 @@
     </nav>
 
     <header class="jumbotron jumbotron-fluid">
-        <div class="container ">
+        <div class="container m-sm-5 ">
             <div class="row">
-                <div class="col">
-
+                <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sollicitudin egestas erat, et
+                        pretium mi fringilla quis. Etiam molestie nibh.
+                    </p>
                 </div>
+            </div>
+            <div class="row">
+                <button class="btn grow">View All</button>
             </div>
         </div>
     </header>
@@ -62,8 +73,8 @@
 
     <div class="container showcase">
         <div class="row">
-            <div class="col-md-4">
-                <div class="card">
+            <div class="col-sm-12 col-md-4 ">
+                <div class="card grow">
                     <div class="card-head text-center text-white p-2">
                         <h3>Watermelon</h3>
                     </div>
@@ -71,15 +82,76 @@
                         <img src="/CSS/Img/Micheladas-El-Gordo-Watermelon-Rimming-Dip-Chamoy.jpg" alt="">
                     </div>
                     <div class="card-text text-center">
-                        Micheladas El Gordo Watermelon Rimming Dip Chamoy
+                        Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span style="color: red;">10.99</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Cucumber-Rimming-Dip-Chamoy.jpg" alt="">
+                <div class="card grow">
+                    <div class="card-head text-center text-white p-2">
+                        <h3>Spicy Cucumber</h3>
+                    </div>
+                    <div class="card-img-top">
+                        <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Cucumber-Rimming-Dip-Chamoy.jpg" alt="">
+                    </div>
+                    <div class="card-text text-center">
+                        Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span style="color: red;">10.99</span>
+                    </div>
+                </div>
             </div>
             <div class="col-md-4">
-                <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Mango-Rimming-Dip-Chamoy.jpg" alt="">
+                <div class="card grow">
+                    <div class="card-head text-center text-white p-2">
+                        <h3>Mango</h3>
+                    </div>
+                    <div class="card-img-top">
+                        <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Mango-Rimming-Dip-Chamoy.jpg" alt="">
+                    </div>
+                    <div class="card-text text-center">
+                        Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span style="color: red;">10.99</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p><a href="#">View all ></a></p>
+    </div>
+
+    <div class="container customer-love ">
+        <div class="row">
+            <div class="col">
+                <h3>Customer Love</h3>
+                <hr>
+            </div>
+        </div>
+
+        <div class="row row-content">
+            <div class="col-md-8 mx-auto">
+                <div id="customerLoveCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#customerLoveCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#customerLoveCarousel" data-slide-to="1"></li>
+                        <li data-target="#customerLoveCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="CSS/Img/kal-visuals--3Le1lY8yTg-unsplash.jpg" alt="First">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="CSS/Img/kats-weil-CLD1i8hp008-unsplash.jpg" alt="Second">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="CSS/Img/elevate-vofmJUVScDE-unsplash.jpg" alt="">
+                        </div>
+                    </div>
+                    <a href="#customerLoveCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a href="#customerLoveCarousel" class="carousel-control-next" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
