--- a/index.html
+++ b/index.html
@@ -20,107 +20,115 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-sm sticky-top">
-        <div class="container">
-            <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#menu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="row">
-                <div class="col">
+    <div class="bg-white shadow-bottom">
+        <nav class="navbar navbar-expand-sm sticky-top">
+            <div class="container">
+                <a href="index.html" class="navbar-brand">
                     <h1>MicheVida</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="collapse navbar-collapse" id="menu">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a href="#" class="nav-link">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Shop</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <header class="jumbotron jumbotron-fluid">
-        <div class="container m-sm-5 ">
-            <div class="row">
-                <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sollicitudin egestas erat, et
-                        pretium mi fringilla quis. Etiam molestie nibh.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <button class="btn grow">View All</button>
-            </div>
-        </div>
-    </header>
+                </a>
+                <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#menu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
 
-    <div class="container showcase">
-        <div class="row">
-            <div class="col-sm-12 col-md-4 ">
-                <div class="card grow">
-                    <div class="card-head text-center text-white p-2">
-                        <h3>Watermelon</h3>
+                <div class="collapse navbar-collapse justify-content-end" id="menu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </div>
+        </nav>
+
+        <header class="jumbotron jumbotron-fluid">
+            <div class="container m-sm-5 jumbo-body">
+                <div class="row">
+                    <div class="col-sm-10 col-md-8 col-lg-6 col-xl-6 jumbo-text">
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident cumque vitae illo veniam error. Praesentium.
+                        </p>
                     </div>
-                    <div class="card-img-top">
-                        <img src="/CSS/Img/Micheladas-El-Gordo-Watermelon-Rimming-Dip-Chamoy.jpg" alt="">
+                </div>
+                <div class="row">
+                    <button class="btn grow">View All</button>
+                </div>
+            </div>
+        </header>
+
+
+        <div class="container showcase">
+            <div class="row">
+                <div class="col-md-4 ">
+                    <div class="card grow mb-5">
+                        <div class="card-head text-center text-white p-2">
+                            <h3>Watermelon</h3>
+                        </div>
+                        <div class="card-img-top">
+                            <img src="/CSS/Img/Micheladas-El-Gordo-Watermelon-Rimming-Dip-Chamoy.jpg" alt="">
+                        </div>
+                        <div class="card-text text-center">
+                            Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span
+                                style="color: red;">10.99</span>
+                        </div>
                     </div>
-                    <div class="card-text text-center">
-                        Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span style="color: red;">10.99</span>
+                </div>
+                <div class="col-md-4">
+                    <div class="card grow mb-5">
+                        <div class="card-head text-center text-white p-2">
+                            <h3>Spicy Cucumber</h3>
+                        </div>
+                        <div class="card-img-top">
+                            <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Cucumber-Rimming-Dip-Chamoy.jpg" alt="">
+                        </div>
+                        <div class="card-text text-center">
+                            Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span
+                                style="color: red;">10.99</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card grow mb-5">
+                        <div class="card-head text-center text-white p-2">
+                            <h3>Mango</h3>
+                        </div>
+                        <div class="card-img-top">
+                            <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Mango-Rimming-Dip-Chamoy.jpg" alt="">
+                        </div>
+                        <div class="card-text text-center">
+                            Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span
+                                style="color: red;">10.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card grow">
-                    <div class="card-head text-center text-white p-2">
-                        <h3>Spicy Cucumber</h3>
-                    </div>
-                    <div class="card-img-top">
-                        <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Cucumber-Rimming-Dip-Chamoy.jpg" alt="">
-                    </div>
-                    <div class="card-text text-center">
-                        Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span style="color: red;">10.99</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card grow">
-                    <div class="card-head text-center text-white p-2">
-                        <h3>Mango</h3>
-                    </div>
-                    <div class="card-img-top">
-                        <img src="/CSS/Img/Micheladas-El-Gordo-Spicy-Mango-Rimming-Dip-Chamoy.jpg" alt="">
-                    </div>
-                    <div class="card-text text-center">
-                        Micheladas El Gordo Watermelon Rimming Dip Chamoy <br> <span style="color: red;">10.99</span>
-                    </div>
-                </div>
-            </div>
+            <p><a href="#">View all ></a></p>
         </div>
-        <p><a href="#">View all ></a></p>
+
     </div>
 
-    <div class="container customer-love ">
-        <div class="row">
-            <div class="col">
-                <h3>Customer Love</h3>
-                <hr>
+
+
+    <div class="container">
+        <div class=" customer-love">
+            <div class="customer-love-bg">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="">Customer Love</h3>
+                        <!-- <hr> -->
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -133,13 +141,13 @@
                         <li data-target="#customerLoveCarousel" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
+                        <div class="carousel-item min-vh-100 active">
                             <img class="d-block w-100" src="CSS/Img/kal-visuals--3Le1lY8yTg-unsplash.jpg" alt="First">
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item min-vh-100">
                             <img class="d-block w-100" src="CSS/Img/kats-weil-CLD1i8hp008-unsplash.jpg" alt="Second">
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item min-vh-100">
                             <img class="d-block w-100" src="CSS/Img/elevate-vofmJUVScDE-unsplash.jpg" alt="">
                         </div>
                     </div>
@@ -156,17 +164,57 @@
         </div>
     </div>
 
+    <div class="bg-white">
 
-    <footer class="site-footer p-5">
-        <div class="container">
-            <div class="row">
-                <div class="col">
+        <div class="empty">
+        </div>
 
+        <div class="parallax">
+            <div class="row justify-content-end ">
+                <div class="col-5">
+                    <div class="img-caption">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laboriosam cumque nihil aliquid consequatur dolor id quam sed inventore reiciendis!</p>
+                    </div>
                 </div>
             </div>
         </div>
 
-    </footer>
+
+        <footer class="site-footer ">
+            <div class="footer-container">
+                <div class="row">
+                    <div class="col-4 offset-1 col-sm-2 links">
+                        <h5>Menu</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Shop</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a href="http://instagram.com" class="btn btn-social-icon btn-instagram"><i
+                                class="fa fa-instagram"></i></a>
+                        <a href="http://facebook.com" class="btn btn-social-icon btn-facebook"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="http://twitter.com" class="btn btn-social-icon btn-twitter"><i
+                                class="fa fa-twitter"></i></a>
+                        <a href="http://youtube.com" class="btn btn-social-icon btn-google"><i
+                                class="fa fa-youtube"></i></a>
+                    </div>
+                    <div class="col-sm-4 text-center links">
+                        <a href="tel:+2815555555" class="btn btn-link" role="button"><i class="fa fa-phone"></i>
+                            281-555-5555</a> <br>
+                        <a href="mailto:info@michevida.com" class="btn btn-link" role="button"><i
+                                class="fa fa-envelope-o"></i> info@michevida.com</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+    </div>
+
 
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
