--- a/index.html
+++ b/index.html
@@ -20,44 +20,92 @@
 </head>
 
 <body>
-    <div class="bg-white shadow-bottom">
-        <nav class="navbar navbar-expand-sm sticky-top">
-            <div class="container">
-                <a href="index.html" class="navbar-brand">
-                    <h1>MicheVida</h1>
-                </a>
-                <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+
+    <nav class="navbar navbar-expand-sm sticky-top">
+        <div class="container">
+            <a href="index.html" class="navbar-brand">
+                <h1>MicheVida</h1>
+            </a>
+            <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
 
-                <div class="collapse navbar-collapse justify-content-end" id="menu">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a href="#" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Shop</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-
-
+            <div class="collapse navbar-collapse justify-content-end" id="menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#shop" class="nav-link">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#customer-love" class="nav-link">Love</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contactUsModal" id="contactUsButton" class="nav-link" role="button">Contact</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
+
+
+    <div class="bg-white shadow-bottom">
+        <div class="contact-us modal fade" role="dialog" id="contactUsModal">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="text-center modal-title">Send Us An Email</h3>
+                        <button class="close" type="button" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-fluid">
+                            <form class="" action="">
+                                <div class="form-group  m-3">
+                                    <div class="row justify-content-center">
+                                        <div class="col-md-12 col-lg-5">
+                                            <label for="name">Name</label><br>
+                                            <input class="form-control" type="text">
+                                        </div>
+                                        <div class="col-md-12 col-lg-5">
+                                            <label for="email">Email</label><br>
+                                            <input class="form-control" type="email">
+                                        </div>
+                                    </div>
+                                    <div class="row justify-content-center">
+                                        <div class="col-xs-6 col-md-12 col-lg-10">
+                                            <label for="phoneNumber">Phone Number</label><br>
+                                            <input class="form-control" type="text">
+                                        </div>
+                                    </div>
+                                    <div class="row justify-content-center">
+                                        <div class="col-xs-6 col-md-12 col-lg-10">
+                                            <label for="message">Message</label><br>
+                                            <textarea class="form-control" name="message" id="" cols="60"
+                                                rows="3"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="row justify-content-center py-4">
+                                        <div class="col-xs-6 col-md-12 col-lg-10">
+                                            <button type="submit" class="btn btn-orange form-control">Send</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <header class="jumbotron jumbotron-fluid">
             <div class="container m-sm-5 jumbo-body">
                 <div class="row">
                     <div class="col-sm-10 col-md-8 col-lg-6 col-xl-6 jumbo-text">
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident cumque vitae illo veniam error. Praesentium.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident cumque vitae illo veniam
+                            error. Praesentium.
                         </p>
                     </div>
                 </div>
@@ -68,7 +116,7 @@
         </header>
 
 
-        <div class="container showcase">
+        <div id="shop" class="container showcase">
             <div class="row">
                 <div class="col-md-4 ">
                     <div class="card grow mb-5">
@@ -115,13 +163,12 @@
             </div>
             <p><a href="#">View all ></a></p>
         </div>
-
     </div>
 
 
 
     <div class="container">
-        <div class=" customer-love">
+        <div class="customer-love" id="customer-love">
             <div class="customer-love-bg">
                 <div class="row">
                     <div class="col">
@@ -159,6 +206,9 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <i class="fa fa-pause"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -170,14 +220,44 @@
         </div>
 
         <div class="parallax">
-            <div class="row justify-content-end ">
-                <div class="col-5">
-                    <div class="img-caption">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laboriosam cumque nihil aliquid consequatur dolor id quam sed inventore reiciendis!</p>
+
+            <div class="row justify-content-end align-items-center">
+                <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4 col-xs-4">
+                    <div class="img-caption ">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste laboriosam cumque nihil
+                            aliquid
+                            consequatur!</p>
                     </div>
                 </div>
             </div>
+
         </div>
+
+        <section class="news-letter container-fluid">
+            <div class="yellow-bg ">
+                <div class="row justify-content-center text-center">
+                    <div class="col-md-8 col-xs-1">
+                        <h3>NEWSLETTER</h3>
+                        <hr class="news-hr">
+                        <p>
+                            Sign up to stay in the loop. Receive updates, access to exclusive deals, and more.
+                        </p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-xl-4">
+                        <input type="text" placeholder="email@example.com" class="form-control">
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col py-3 text-center">
+                        <button class="btn sub-btn">SUBSCRIBE >></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
 
         <footer class="site-footer ">
@@ -187,8 +267,8 @@
                         <h5>Menu</h5>
                         <ul class="list-unstyled">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Shop</a></li>
-                            <li><a href="#">About</a></li>
+                            <li><a href="#shop">Shop</a></li>
+                            <li><a href="#customer-love">Love</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
@@ -221,6 +301,8 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="./js/scripts.js"></script>
 
 </body>
 
