--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Nothing+You+Could+Do&display=swap"
@@ -76,7 +76,7 @@
                                     <div class="row justify-content-center">
                                         <div class="col-xs-6 col-md-12 col-lg-10">
                                             <label for="phoneNumber">Phone Number</label><br>
-                                            <input class="form-control" type="text">
+                                            <input class="form-control" type="tel">
                                         </div>
                                     </div>
                                     <div class="row justify-content-center">
@@ -119,7 +119,7 @@
         <div id="shop" class="container showcase">
             <div class="row">
                 <div class="col-md-4 ">
-                    <div class="card grow mb-5">
+                    <div class="card grow mb-5" role="button" id="watermelonCardButton">
                         <div class="card-head text-center text-white p-2">
                             <h3>Watermelon</h3>
                         </div>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card grow mb-5">
+                    <div class="card grow mb-5" role="button" id="spicyCuCardButton">
                         <div class="card-head text-center text-white p-2">
                             <h3>Spicy Cucumber</h3>
                         </div>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card grow mb-5">
+                    <div class="card grow mb-5" role="button" id="mangoCardButton">
                         <div class="card-head text-center text-white p-2">
                             <h3>Mango</h3>
                         </div>
@@ -162,6 +162,134 @@
                 </div>
             </div>
             <p><a href="#">View all ></a></p>
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" role="dialog" tabindex="-1" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true" id="watermelonModal">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Watemenlon</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="./CSS/Img/Micheladas-El-Gordo-Watermelon-Rimming-Dip-Chamoy.jpg" alt="">
+                            </div>
+                            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
+                            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-9">
+                                Level 1: .col-sm-9
+                                <div class="row">
+                                    <div class="col-8 col-sm-6">
+                                        Level 2: .col-8 .col-sm-6
+                                    </div>
+                                    <div class="col-4 col-sm-6">
+                                        Level 2: .col-4 .col-sm-6
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" role="dialog" tabindex="-1" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true" id="spicyCuModal">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Spicy Cucumber</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4">.col-md-4</div>
+                            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
+                            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-9">
+                                Level 1: .col-sm-9
+                                <div class="row">
+                                    <div class="col-8 col-sm-6">
+                                        Level 2: .col-8 .col-sm-6
+                                    </div>
+                                    <div class="col-4 col-sm-6">
+                                        Level 2: .col-4 .col-sm-6
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" role="dialog" tabindex="-1" aria-labelledby="myLargeModalLabel"
+        aria-hidden="true" id="mangoModal">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Mango</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-4">.col-md-4</div>
+                            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
+                            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-9">
+                                Level 1: .col-sm-9
+                                <div class="row">
+                                    <div class="col-8 col-sm-6">
+                                        Level 2: .col-8 .col-sm-6
+                                    </div>
+                                    <div class="col-4 col-sm-6">
+                                        Level 2: .col-4 .col-sm-6
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -180,7 +308,7 @@
         </div>
 
         <div class="row row-content">
-            <div class="col-md-8 mx-auto">
+            <div class="col-xs-12 mx-auto">
                 <div id="customerLoveCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#customerLoveCarousel" data-slide-to="0" class="active"></li>
