--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                         <a href="#" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#shop" class="nav-link">Shop</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#customer-love" class="nav-link">Love</a>
+                        <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contactUsModal" id="contactUsButton" class="nav-link" role="button">Contact</a>
@@ -426,9 +423,8 @@
                     <div class="col-4 offset-1 col-sm-2 links">
                         <h5>Menu</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#shop">Shop</a></li>
-                            <li><a href="#customer-love">Love</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="/about.html">About</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
