--- a/about.html
+++ b/about.html
@@ -105,14 +105,14 @@
 
 
 
-    <div class="container gray-bg">
+    <div class="container gray-bg from-right">
         <div class="row">
             <div class="col">
-                <h3 class="text-center">Welcome To Our World</h3>
+                <h3 class="text-center from-left">Welcome To Our World</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col text-center about-content">
+            <div class="col text-center about-content from-left">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt amet perferendis fugit sed
                 distinctio ut quaerat aspernatur exercitationem, nihil odit et ex quis velit voluptate dolore placeat
                 veritatis optio.
@@ -128,34 +128,39 @@
         </div>
     </div>
 
+    <div class="row justify-content-center">
+        <section class="pb-5">
 
-    <section class="about-mid pb-5">
-        <div class="">
-            <h3 class="text-center mt-5 pt-5">Some Title</h3>
+            <h3 class="text-center mt-4 pt-4">Cheers!!!<span class="emoji" style='font-size:40px;'>&#127867;</span></h3>
+
             <div class="row">
                 <div class="col">
                     <div class="container container-fluid">
                         <p class="text-center about-content">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos accusantium eligendi
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos accusantium
+                            eligendi
                             magni
-                            fuga totam nobis eum voluptatum vero assumenda atque, perspiciatis consequatur quia officiis
+                            fuga totam nobis eum voluptatum vero assumenda atque, perspiciatis consequatur quia
+                            officiis
                             at
                             natus, doloremque, expedita maiores delectus.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center about-img">
-                <div class="col-xs-4">
-                    <img src="./CSS/img/beer-820011_1920.jpg" alt="">
-                </div>
-                <div class="col-xs-4">
-                    <img src="./CSS/img/drinks-4243433_1920.jpg" alt="">
+            <div class="about-mid">
+                <div class="row justify-content-center about-img">
+
+                    <div class="col-xs-4">
+                        <img src="./CSS/img/beer-820011_1920.jpg" alt="">
+                    </div>
+                    <div class="col-xs-4">
+                        <img src="./CSS/img/drinks-4243433_1920.jpg" alt="">
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-
+        </section>
+    </div>
 
 
 
@@ -220,6 +225,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
 
     <script src="./js/scripts.js"></script>
 
