--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-sm sticky-top">
         <div class="container">
-            <a href="index.html" class="navbar-brand">
+            <a href="index.html" class="navbar-brand navbar-brand-animation">
                 <h1>MicheVida</h1>
             </a>
             <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#menu">
@@ -33,13 +33,13 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="menu">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item nav-item-animation active">
                         <a href="#" class="nav-link">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-item-animation">
                         <a href="about.html" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-item-animation">
                         <a href="#contactUsModal" id="contactUsButton" class="nav-link" role="button">Contact</a>
                     </li>
                 </ul>
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="row justify-content-center py-4">
                                         <div class="col-xs-6 col-md-12 col-lg-10">
-                                            <button type="submit" class="btn btn-orange form-control">Send</button>
+                                            <button type="submit" class="btn contact-us-button btn-orange form-control">Send</button>
                                         </div>
                                     </div>
                                 </div>
