--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="row justify-content-center py-4">
                                     <div class="col-xs-6 col-md-12 col-lg-10">
-                                        <button type="submit" class="btn btn-orange form-control">Send</button>
+                                        <button type="submit" class="btn contact-us-button btn-orange form-control">Send</button>
                                     </div>
                                 </div>
                             </div>
